Switch to knex for queries, fix swagger to allow param testing
