# backend/routes/voters/getTopVoters.js
@@ -1,37 +1,24 @@
 // @ts-check
 
-const express = require('express');
+const express = require("express");
 const router = express.Router();
 
+module.exports = (knex) => {
+  router.get("/top-voters", async (req, res) => {
+    try {
+      const rows = await knex("votes")
+        .select("users.id", "first_name")
+        .count("votes.id as vote_count")
+        .join("users", "votes.user_id", "users.id")
+        .groupBy("users.id")
+        .orderBy("vote_count", "desc");
 
-module.exports = (db) => {
-    router.get('/top-voters', async (req, res) => {
-
-  try {
-        const query = `SELECT 
-              users.id, 
-              first_name, 
-              COUNT(votes.id) AS vote_count
-          FROM 
-              votes 
-          INNER JOIN 
-              users 
-          ON 
-              votes.user_id = users.id
-          GROUP BY 
-              users.id 
-          ORDER BY 
-              vote_count DESC`;
-        const [rows] = await db.query(query,);
-        res.json(rows);
-
-       
+      res.json(rows);
     } catch (error) {
-        console.error('Error executing query:', error);
-        res.status(500).send('Internal Server Error');
-      }
-   
-    });
+      console.error("Error executing query with Knex:", error);
+      res.status(500).send("Internal Server Error");
+    }
+  });
 
-    return router;
+  return router;
 };
